# loom-cutter

./: .gitignore  LICENSE  Launch Loom Cutter.command  NEXT_STEPS.md  PLAN.md  README.md  cli.py  pyproject.toml
LoomCutter.app/Contents/: Info.plist
LoomCutter.app/Contents/MacOS/: LoomCutter
LoomCutter.app/Contents/Resources/: LoomCutter.icns
LoomCutter.app/Contents/_CodeSignature/: CodeDirectory  CodeResources
design/: mockup.html
pipeline/: edit_llm.py  render.py  silences.py  snap_silence.py  transcribe.py  waveform.py
scripts/: build-icon.sh  start.sh
server/: import_pipeline.py  main.py
ui/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  main.tsx  types.ts
ui/src/components/: DropZone.css  DropZone.tsx  ImportStatus.css  ImportStatus.tsx  ProjectTabs.css  ProjectTabs.tsx  SettingsOverlay.css  SettingsOverlay.tsx  ShortcutsOverlay.css  ShortcutsOverlay.tsx  Transcript.css  Transcript.tsx  VideoPlayer.css  VideoPlayer.tsx  Waveform.css  Waveform.tsx
ui/src/styles/: app.css  tokens.css
